[package]
name = "pickaxe"
description = "a benchmark with some http endpoint test skills"
version = "0.1.0"
authors = ["quirinux"]
edition = "2018"

[lib]
name = "pickaxe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
url = "2.1.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
crossbeam = "0.7"
crossbeam-channel = "0.4"
serde_json = "1.0"
